--- a/ITMO.WPF.Calculator/CalcUI.xaml
+++ b/ITMO.WPF.Calculator/CalcUI.xaml
@@ -53,7 +53,7 @@
             <Button Grid.Row="2" Grid.Column="6" Style="{StaticResource buttonStyle}" Background="Yellow" ToolTip="Возведение в квадрат">x^2</Button>
             <Button Grid.Row="2" Grid.Column="8" Style="{StaticResource buttonStyle}" Background="Yellow" ToolTip="Расчет факториала">n!</Button>
             <Button Grid.Row="0" Grid.Column="8" Style="{StaticResource buttonStyle}" Background="Yellow" ToolTip="Кубический корень">3√</Button>
-            
+            <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="7" Style="{StaticResource buttonStyle}" Background="Yellow" ToolTip="Расчет квадратного уравнения">AХ²+BX+C</Button>
         </Grid>
 
         <!-- ButtonsPad -->
